--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "Ruoxuan-Li-Roxanne.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "IMG_9219.jpg"
   name             : "Ruoxuan Li"
-  pronouns         : "she/her"  
-  bio              : "Ph.D. student at University of Notre Dame"
+  pronouns         : # "she/her"  
+  bio              : "Ph.D. student in Quantitative Psychology, University of Notre Dame"
   location         : "South Bend, IN"
   employer         : "University of Notre Dame"
   uri              : # URL
