--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Research and Publications"
     url: /publications/
 
   #- title: "Talks"
@@ -12,7 +12,7 @@ main:
   #- title: "Portfolio"
   #  url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Fun Facts"
     url: /year-archive/
     
   #- title: "CV"
