--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "Ruoxuan-Li-Roxanne.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "IMG_9219.jpg"
+  avatar           : "IMG_9990.JPG"
   name             : "Ruoxuan Li"
   pronouns         : # "she/her"  
   bio              : "Ph.D. student in Quantitative Psychology, University of Notre Dame"
